[Fixes #78038182] Adding a float left to upload progress to stop wrapping of top nav

--- a/wonder/romeo/static/assets/css/app.css
+++ b/wonder/romeo/static/assets/css/app.css
@@ -6096,11 +6096,12 @@ label,
 /* line 1, ../../scss/specifics/upload/_upload-progress.scss */
 .upload-progress {
   display: inline-block;
+  float: left;
   padding-right: 12px;
   font-size: 20px;
 }
 
-/* line 27, ../../scss/specifics/upload/_upload-progress.scss */
+/* line 28, ../../scss/specifics/upload/_upload-progress.scss */
 .upload-progress__link {
   cursor: pointer;
 }
