--- a/wonder/romeo/static/scss/specifics/upload/_upload-progress.scss
+++ b/wonder/romeo/static/scss/specifics/upload/_upload-progress.scss
@@ -1,5 +1,6 @@
 .upload-progress {
   display: inline-block;
+  float: left;
 //  margin-right: $base-spacing-unit;
   padding-right: 12px;
   font-size: 20px;
